--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ function createDiv(height, width) {
   </h1>
   <p>
     aurora she/her lesbian disabled white <br>
-    certified girlbossing women in stem (i hard coded this website) and licensed twitter veteran <br> </p>
+    certified girlbossing women in stem and licensed twitter veteran <br> </p>
 
 <ion-list>
             <ion-item *ngFor="pai button">
@@ -450,7 +450,7 @@ function createDiv(height, width) {
     dni
   </h1>
   <p>
-    proship/kaeluc shipper, support bi/pan lesbians, not supporting the loona boycott, basic dni criteria etc, user of the permanent marker font/hj
+    ZIONIST. proship/kaeluc shipper, support bi/pan lesbians, not supporting the loona boycott, basic dni criteria etc, user of the permanent marker font/hj
   </p>
   <h1>
     byf
@@ -463,7 +463,7 @@ function createDiv(height, width) {
     interests
   </h1>
   <p>
-    <i>loona (hyeju, haseul, ot12), genshin (i'm literally only in this for kaeya i really only talk about him / kbd / the women) , tangled (eugene lover + new dream enjoyer), dolls (eah, mh, rh),</i> drag race, waterparks, marina, disney's frozen, phineas&ferb and other 2000s/2010s kids shows, youtube (kurtis conner, safiya nygaard, jarvis johnson, jordan adika, danny gonzalez, drew gooden etc)<br><br>
+    <i>loona (hyeju, haseul, ot12), genshin (i'm literally only in this for kaeya i really only talk about him / kbd / the women) , tangled (eugene lover + new dream enjoyer), dolls (eah, mh, rh),</i> drag race, waterparks, marina, disney's frozen, phineas&ferb and other 2000s/2010s kids shows<br><br>
 
 *except for rapunzel we love you rapunzel and eugene the only straight people ever!
   </p>
