--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ function createDiv(height, width) {
     interests
   </h1>
   <p>
-    <i>loona (hyeju, haseul, ot12), genshin (i'm literally only in this for kaeya i really only talk about him / kbd / the women) , tangled (eugene lover + new dream enjoyer), dolls (eah, mh, rh),</i> drag race, waterparks, marina, disney's frozen, phineas&ferb and other 2000s/2010s kids shows<br><br>
+    <i>dolls (eah, mh, rh), tangled (eugene lover + new dream enjoyer), dan & phil (in 2024? yes. Unfortunately), genshin (i'm literally only in this for kaeya i really only talk about him / kbd / the women), </i> mlp g4, NCIS, loona (hyeju, haseul, ot12), drag race, waterparks, chappell roan, marina<br><br>
 
 *except for rapunzel we love you rapunzel and eugene the only straight people ever!
   </p>
